# loconotion

./: .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml  flipio_site.toml  loconotion.css  loconotion.js  loconotion.py  pyproject.toml  requirements.txt  test_site.toml
.github/workflows/: docker.yml
bundles/: loconotion.css  loconotion.js
docker/: Dockerfile
example/: custom-script.js  example_site.toml
loconotion/: __main__.py  conditions.py  fileorganizer.py  notionparser.py  table_patch.py
loconotion/modules/: conditions.py  main.py  notionparser.py  table_patch.py
loconotion/tests/: test_file.txt  test_inject_custom_tags.py  test_parser.py  test_sitemap.py
tests/: test_parser.py
